--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,11 @@
         <service android:name=".service.PetFreeService"
             android:enabled="true"
             android:exported="true"/>
+
+        <activity android:name=".BluetoothCombine.CombineActivity"
+            android:label="combine"
+            android:theme="@style/CombineTheme"/>
+
     </application>
 
 </manifest>
