--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,17 @@
             android:enabled="true"
             android:exported="true"/>
 
+        <service android:name=".service.MMListenService"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService"/>
+            </intent-filter>
+
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/accessibility"/>
+        </service>
+
         <!--*************************broadcastreceiver**************************************-->
         <receiver android:name=".receiver.AlarmReceiver"/>
         <receiver android:name=".receiver.SetAlarmReceiver">
